# jdepp-python

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
crates/jdepp-rs/: Cargo.toml  README.md  build.rs
crates/jdepp-rs/examples/: parse_from_postagged.rs  parse_structured.rs
crates/jdepp-rs/src/: bindings.cpp  jdepp.c  jdepp.rs  lib.rs  main.rs
jdepp/: pdep.cc
